[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "looseene"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A tiny, persistent full-text search engine in one file."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
